# rc

./: Cargo.toml  Makefile  README.md  rc  syntax.txt
.github/workflows/: release.yml
examples/: euler_one.riff  euler_one_min.riff  euler_six.riff  euler_six_min.riff  euler_two.riff  euler_two_min.riff
src/: main.rs
template/: main.rs
tests/: error_test_div_zero.riff  error_test_invalid_list.riff  error_test_unmatched_brace.riff  error_test_unmatched_bracket.riff  test_and.riff  test_fib.riff  test_list_indexing.riff  test_list_length.riff  test_list_ops.riff  test_logical_ops.riff  test_simple.riff  test_while.riff
tests/expected/: error_test_div_zero.out  error_test_invalid_list.out  error_test_unmatched_brace.err  error_test_unmatched_bracket.err  test_and.out  test_logical_ops.out
